# BB74.Media.Xwt

./: .gitignore  BB74.Media.Xwt.XamMac.sln  BB74.Media.Xwt.sln  BB74.OpenTK.Xwt.XamMac.sln  BB74.OpenTK.Xwt.sln  appveyor-.yml  appveyor.yml  build.bat
BB74.Media.Base/: BB74.Media.Base.csproj  Class1.cs  Log.cs  Platform.cs  Time.cs  build.bat  copy._bat  media.cs
BB74.Media.Base/Properties/: AssemblyInfo.cs
BB74.Media.Base/Threading/: ReaderWriterLocks.cs
BB74.Media.Native/: BB74.Media.FFMPEG._nuspec  build.bat  copy._bat
BB74.Media.Native/BB74.Media.Interop/: AudioOut.cs  BB74.Media.Interop.csproj  Mixer.cs  app.config  media.cs  packages.config  staticinit.cs
BB74.Media.Native/BB74.Media.Interop.Impl/: BB74.Media.Interop.Impl.csproj  BB74.Media.Interop.Impl.x64.csproj  BB74.Media.Interop.Impl.x86.csproj  Imports.cs  packages.config
BB74.Media.Native/BB74.Media.Native/: BB74.Media.Native.vcxproj  CMakeLists.txt  all.cpp  interop.cpp  linux.cpp  linux_sound.cpp  movieplayer.cpp  movieplayer_basestream.cpp  movierecorder.h  osx_sound.cpp  stdafx.h  windows_sound.cpp
BB74.Media.Native/BB74.Media.Native/cmake/: CMakeCache.txt
BB74.Media.Native/BB74.Media.Native/soundtouch/include/: STTypes.h
BB74.Media.Native/BB74.Media.Native/soundtouch/lib/: SoundTouchD_x64.lib
BB74.Media.OpenTK/BB74.Media.OpenTK/: Class1.cs
BB74.Media.OpenTK/BB74.Media.OpenTK.GTK/: BB74.Media.OpenTK.GTK.csproj  PlatForm.cs
BB74.Media.OpenTK/BB74.Xwt.OpenTK/: BB74.Xwt.OpenTK.csproj  Platform.cs
BB74.Media.OpenTK/BB74.Xwt.OpenTK.WPF/: BB74.Xwt.OpenTK.WPF.csproj  packages.config
BB74.Media.OpenTK/BB74.Xwt.OpenTK.XamMac/: BB74.Gtk.OpenTK.XamMac.csproj  packages.config
BB74.Xwt.Media.Controls/: BB74.Xwt.Media.Controls.csproj  Canvas3D.cs  Interfaces.cs  app.config  packages.config
BB74.Xwt.Media.Controls/Properties/: AssemblyInfo.cs
BB74.Xwt.OpenTK/: build.bat  copy._bat
BB74.Xwt.OpenTK/BB74.Xwt.OpenTK/: BB74.Xwt.OpenTK._nuspec  BB74.Xwt.OpenTK.csproj  Interfaces.cs  Platform.cs  media.cs  packages.config
BB74.Xwt.OpenTK/BB74.Xwt.OpenTK.GTK/: BB74.Xwt.OpenTK.GTK._nuspec  BB74.Xwt.OpenTK.GTK.csproj  PlatForm.cs  app.config  packages.config
BB74.Xwt.OpenTK/BB74.Xwt.OpenTK.WPF/: BB74.Xwt.OpenTK.WPF._nuspec  BB74.Xwt.OpenTK.WPF.csproj  Platform.cs  packages.config
BB74.Xwt.OpenTK/BB74.Xwt.OpenTK.XamMac/: BB74.Xwt.OpenTK.XamMac.csproj  BB74.Xwt.OpenTK.XamMac.nuspec  PlatForm.View.cs  PlatForm.cs  app.config  packages.config
Examples/MediaExample/: DockExample.csproj  MediaExample.XamMac.Lib.csproj  MediaExample.XamMac.csproj  MediaExample.csproj  Program.cs  app.config  packages.config  testdoc2.cs
Examples/MediaExample.Mac/: MediaExample.XamMac.csproj  app.config  packages.config
Examples/MovieExample.Mac/: Info.plist  Program.cs  (+2 more)
Media.Base/: Class1.cs  Media.Base.csproj  Media.Base.nuspec
Media.Native/: Media.Native.vcxproj  audioconvert.cpp  audioconvert.h  linux_sound.cpp.bak  movieplayer.cpp  movieplayer.h  movierecorder.h  stdafx.h  win32.cpp
Media.Native/Media.Native/: CMakeLists.txt  Media.Native.vcxproj  all.cpp  linux.cpp  linux_sound.cpp  media.h  movieplayer.cpp  movieplayer.h  movieplayer_audio.cpp  movieplayer_video.cpp  movierecorder.cpp  movierecorder_stream.cpp  osx_sound.cpp  stdafx.h  windows_sound.cpp
Media.Native/Media.Native/soundtouch/include/: BPMDetect.h  SoundTouch.h
Media.OpenTK/: Class1.cs  Imports.cs  Media.OpenTK.csproj  Platform.cs  media.cs  packages.config  wrappers.cs
Media.OpenTK.GTK/: Media.OpenTK.GTK.csproj  PlatForm.cs  app.config  packages.config
Media.OpenTK.WPF/: Media.OpenTK.WPF.csproj  Platform.cs  packages.config  render.fx  render2.fx  render3.fx
Media.OpenTK.XamMac/: Media.OpenTK.XamMac.csproj  PlatForm.View.cs  PlatForm.cs  packages.config
MediaExample/: MediaExample.XamMac.Lib.csproj  MediaExample.XamMac.csproj  MediaExample.csproj  Program.cs  documents.cs  mainwindow.cs  packages.config  shader.cs  testdoc2.cs  toolbars.cs
SimpleExample/: Info.plist  MainWindow.cs  Program.cs  SimpleExample.XamMac.csproj  SimpleExample.XamMac.lib.csproj  SimpleExample.csproj  packages.config
(+135 files in other folders)
